# paperSegment

./: .gitignore  configure.ac  debugging.ws
datas/: fragment.frag  vertex.vert
m4/: cuda.m4
paperSegment/src/: fragment.frag  seed.h  zsegment.cpp
src/: Makefile.am  calibration_stereo.xml  colorsegment.cpp  colorsegment.h  fragment.frag  gmm.cpp  gmm.h  kinect.cpp  kinect.h  kinect.pro  main.cpp  papersegment.pro  seed.cpp  seed.h  vertex.vert  zsegment.cpp  zsegment.h
